# opengl_sun_moon_earth

./: .gitignore  CMakeLists.txt  README.md
sun_moon_earth/: main.cpp  shader_creator.cpp  shader_creator.h  sun_moon_earth.vcxproj  sun_moon_earth.vcxproj.filters  vertex_creator.cpp  vertex_creator.h
sun_moon_earth/glad_src/: glad.c
